Prevented navbar overflowing and new post

--- a/public/css/main.css
+++ b/public/css/main.css
@@ -11,6 +11,7 @@ nav{
     overflow: hidden;
     position: fixed;
     top: 0;
+    z-index: 999;
 }
 
 nav b{
@@ -42,7 +43,7 @@ body{
 
 .main{
     margin-top: 50px ;
-    padding: 4px;
+    /* padding: 10px; */
 }
 .posts{
     width: 88%;
@@ -88,6 +89,7 @@ body{
     box-shadow: 1px 1px 1px 2px lightgray;
     justify-content: center;
     align-items: center;
+    margin-bottom: 50px;
 }
 
 .no_posts a{
